Move to ruff for lintern and format in python files, instead of black

--- a/src/ros_project_creator/resources/vscode/dot_devcontainer.j2
+++ b/src/ros_project_creator/resources/vscode/dot_devcontainer.j2
@@ -7,23 +7,22 @@
     "customizations": {
         "vscode": {
             "extensions": [
+                "charliermarsh.ruff",
                 "cheshirekow.cmake-format",
                 "cschlosser.doxdocgen",
                 "davidanson.vscode-markdownlint",
                 "dotjoshjohnson.xml",
                 "foxundermoon.shell-format",
-                "morningfrog.urdf-visualizer"
+                "morningfrog.urdf-visualizer",
                 "ms-azuretools.vscode-docker",
                 "ms-iot.vscode-ros",
-                "ms-python.black-formatter",
-                "ms-python.flake8",
-                "ms-python.isort",
                 "ms-python.python",
                 "ms-python.vscode-pylance",
                 "ms-vscode.cmake-tools",
                 "ms-vscode.cpptools",
                 "redhat.vscode-yaml",
-                "ryzngard.vscode-header-source"
+                "ryzngard.vscode-header-source",
+                "tamasfe.even-better-toml"
             ]
         }
     }
