--- a/src/ros_project_creator/resources/docker/docker-compose.j2
+++ b/src/ros_project_creator/resources/docker/docker-compose.j2
@@ -55,3 +55,15 @@ services:
       {% endif %}
       - EXT_UID={{ ext_uid }}
       - EXT_UPGID={{ ext_upgid }}
+      {% if ros_version == 1 %}
+      - ROS_MASTER_URI="http://localhost:11311"
+      - ROS_HOSTNAME="localhost"
+      {% else %}
+      - ROS_DOMAIN_ID=0 # Default ROS_DOMAIN_ID. Consider changing it to avoid conflicts with other ROS systems.
+      {% if ros_distro == "humble" %}
+      - ROS_LOCALHOST_ONLY="1"
+      {% else %}
+      - ROS_AUTOMATIC_DISCOVERY_RANGE="LOCALHOST"
+      {% endif %}
+      - RMW_IMPLEMENTATION="rmw_fastrtps_cpp"
+      {% endif %}
