Fix incorrect option in workspace file for vscode
editor.lineNumbers: relative (on is no supported)

--- a/src/ros_project_creator/resources/vscode/ws.j2
+++ b/src/ros_project_creator/resources/vscode/ws.j2
@@ -15,7 +15,7 @@
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "file",
     "editor.formatOnType": true,
-    "editor.lineNumbers": "on",
+    "editor.lineNumbers": "relative",
     "editor.rulers": [
       120
     ],
