Added support to set python_version explicitely

--- a/src/ros_project_creator/resources/vscode/ws.j2
+++ b/src/ros_project_creator/resources/vscode/ws.j2
@@ -71,11 +71,11 @@
     // PYTHON SETTINGS
     // ==========================================================================
     "python.autoComplete.extraPaths": [
-      "/opt/ros/jazzy/lib/python3.12/site-packages"
+      "/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/site-packages"
     ],
     "python.analysis.autoFormatStrings": true,
     "python.analysis.extraPaths": [
-      "/opt/ros/jazzy/lib/python3.12/site-packages"
+      "/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/site-packages"
     ],
     "python.analysis.typeCheckingMode": "standard",
     "python.languageServer": "Pylance",
