--- a/src/ros_project_creator/resources/vscode/ws.j2
+++ b/src/ros_project_creator/resources/vscode/ws.j2
@@ -13,7 +13,7 @@
     "editor.detectIndentation": true,
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
-    "editor.formatOnSaveMode": "file",
+    "editor.formatOnSaveMode": "modificationsIfAvailable",
     "editor.formatOnType": true,
     "editor.lineNumbers": "relative",
     "editor.rulers": [
@@ -80,13 +80,13 @@
     "python.analysis.typeCheckingMode": "standard",
     "python.languageServer": "Pylance",
     "[python]": {
-      "editor.defaultFormatter": "charliermarsh.ruff",
-      "editor.formatOnSave": false,
-      "editor.codeActionsOnSave": {
-        "source.fixAll.ruff": "explicit", // lint + safe autofix  (ruff --fix)
-        "source.organizeImports": "explicit", // import order
-        "source.formatDocument.ruff": "explicit" // format with ruff
-      },
+        "editor.defaultFormatter": "charliermarsh.ruff",
+        "editor.formatOnSave": true,
+        "editor.formatOnSaveMode": "modificationsIfAvailable",
+        "editor.codeActionsOnSave": {
+            "source.fixAll.ruff": "explicit",
+            "source.organizeImports.ruff": "explicit"
+        }
     },
 
     // ==========================================================================
