Added 'new extension' for ros development in devcontainer file

--- a/src/ros_project_creator/resources/vscode/dot_devcontainer.j2
+++ b/src/ros_project_creator/resources/vscode/dot_devcontainer.j2
@@ -15,6 +15,7 @@
                 "ms-python.vscode-pylance",
                 "ms-vscode.cmake-tools",
                 "ms-vscode.cpptools",
+                "ranch-hand-robotics.rde-pack",
                 "redhat.vscode-yaml",
                 "tamasfe.even-better-toml"
             ]
